# projeto_checkpoint

./: README.md  docker-compose.yml
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx
Frontend/src/components/Footer/: index.jsx  styles.module.css
Frontend/src/components/Header/: index.jsx  styles.module.css
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/main/: app.py  database.py  models.py  schemas.py  security.py  settings.py
backend/main/routers/: auth.py  games.py  users.py
backend/migrations/versions/: 183bb07b5941_add_game_and_user_game_tables.py  1a05aa9f0d70_alteração_na_tabela_de_games.py  3fb40347eed2_alteração_na_tabela_user_games.py  6f084b4cb370_adicionando_o_campo_init_false_para_o_.py  a4b2650bdbf9_inserção_do_campo_avatar_url_na_tabela_.py  cafce6d0cd2c_criação_do_banco_de_dados.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/GameCard/: GameCard.jsx  styles.module.css
frontend/src/components/GameDetailsModal/: index.jsx  styles.module.css
frontend/src/components/Header/: index.jsx  styles.module.css
frontend/src/components/NewGameModal/: NewGameModal.jsx  styles.module.css
frontend/src/components/Sidebar/: Sidebar.jsx  styles.module.css
frontend/src/components/Topbar/: index.jsx  styles.module.css
frontend/src/hooks/: useAuth.jsx
frontend/src/pages/ConfigurationsPage/: Configuration.jsx  styles.module.css
frontend/src/routes/: ProtectedRoute.jsx  Routes.jsx
frontend/src/services/: api.js
(+16 files in other folders)
